# thematic-search

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: automated-testing.yml
docs/: requirements.txt  tikzcd.txt
docs/source/: api.rst  conf.py  index.rst  newsgroups.ipynb  queries.ipynb  quickstart.rst  serialization.rst  theme-query.ipynb  toponymy_integration.rst  un-toponymy.ipynb
src/: __init.py__  __init__.py  saving.py  serialization.py  softclustertree.py  topicdatabase.py  utilities.py
tests/: test_serialization.py  test_theme.py  test_topicdb.py
thematic_search/: __init__.py  queries.py  serialization.py  softclustertree.py  taghierarchy.py  theme.py  topicdatabase.py  utilities.py
