[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thematic-search"
version = "0.0.1"
authors = [
    {name = "Kaleb D Ruscitti", email="kaleb.ruscitti@uwaterloo.ca"},
]
description = ""
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["tda", "topic modeling", "database", "search"]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pynndescent",
]

#[project.urls]
#Homepage = "https://github.com/TutteInstitute/temporal-mapper"
#Repository = "https://github.com/TutteInstitute/temporal-mapper"
#Documentation = "https://temporal-mapper.readthedocs.io"
