[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thematic_search"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    {name = "Kaleb D Ruscitti", email="kaleb.ruscitti@uwaterloo.ca"},
]
description = ""
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["information retrieval", "topic modeling", "database", "search"]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.20",
    "pandas",
    "scipy",
    "pynndescent",
]

[project.optional-dependencies]
lance = ["lance", "pyarrow"]